[gd_scene load_steps=2 format=2]

[ext_resource path="res://scences/sc_graphedit_testl.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="."]
margin_top = 29.0
margin_right = 1920.0
margin_bottom = 1029.0
rect_min_size = Vector2( 1920, 1000 )
right_disconnects = true
scroll_offset = Vector2( -89, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 67.0
margin_bottom = 24.0
text = "add note"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
margin_left = 237.998
margin_top = 3.748
margin_right = 308.998
margin_bottom = 23.748
text = "back"
[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
